fix: adaptando codigo ao jdk abaixo do 11 e corrigindo classes